# coral

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
coral/: __init__.py  __main__.py  api_models.py  audit.py  auth.py  cli.py  cli_client.py  cli_format.py  clipboard.py  config.py  crypto.py  daemon.py  diag.py  http_api.py  keychain.py  mcp_install.py  mcp_server.py  models.py  paths.py  policy.py  restoration.py  service.py  sessions.py  vault.py
coral/behavior_packs/: __init__.py  github.yaml  gmail.yaml  linear.yaml  linkedin.yaml  notion.yaml  slack.yaml
coral/migrations/: 001_initial.sql  002_pending_reviews.sql  003_session_attention.sql
docs/: ADR-006-vault-encryption.md  ADR-007-daemon-lifecycle.md  ADR-008-http-api-and-mcp.md  ADR-009-daily-use-ux.md  ADR-010-per-session-chromium.md  ADR-011-policy-engine.md  ADR-012-deferred-cleanup.md  ADR-013-release-strategy.md  ADR-014-release-and-security-review.md  ADR-015-vault-worker-thread.md  ADR-016-ux-overhaul.md  ADR-017-keychain-integration.md  ADR-018-storage-writeback.md  architecture.md  behavior-packs.md  performance.md  policy-language.md  release-process.md  security-review-prep.md
examples/: .gitignore  README.md
examples/browser_use/: README.md  main.py  requirements.txt
examples/python_mcp/: README.md  main.py  requirements.txt
examples/stagehand/: README.md  index.ts  package.json
extension/: INSTALL.md  eslint.config.js  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
extension/icons/: generate.py
extension/public/: manifest.json
extension/src/: background.ts  capture.ts  client.ts  messages.ts  popup.css  popup.ts  state.ts
extension/src/__tests__/: capture.test.ts  client.test.ts  state.test.ts
tests/e2e/: .gitkeep  test_capture_and_restore.py
tests/fixtures/: .gitkeep
tests/fixtures/test_server/: .gitkeep  __init__.py  runner.py  server.py
tests/integration/: .gitkeep  test_handshake_and_session_lifecycle.py  test_init_and_start.py  test_mcp_stdio.py  test_panic.py  test_policy_enforcement.py  test_session_server.py
tests/manual/: .gitkeep  perf_baseline.py
tests/unit/: test_auth.py  test_cli_client.py  test_cli_diagnose.py  test_cli_format.py  test_cli_status.py  test_clipboard.py  test_config.py  test_crypto.py  test_diag.py  test_http_api.py  test_keychain.py  test_mcp_install.py  test_mcp_server.py  test_orphan_recovery.py  test_policy.py  test_policy_http.py  test_restoration.py  test_service.py  test_sessions_writeback.py  test_smoke.py  test_vault.py  test_vault_cross_loop.py
typings/sqlcipher3/: dbapi2.pyi
